<resources>
    <string name="app_name">Lab03c2016</string>
    <string name="title">WorkFromHome</string>
    <string name="toolbar_crear_oferta">CREAR UNA OFERTA</string>
    <string name="toolbar_ver_ofertas">VER MIS OFERTAS</string>
    <string name="toolbar_config">CONFIGURACION</string>
    <string name="toolbar_salir">SALIR</string>
    <string name="dialog_title">Acciones</string>
    <string name="dialog_postularse">Postularese a esta oferta</string>
    <string name="dialog_compartir">Compartir esta oferta</string>
    <string name="textView_crearOferta">Ingrese oferta</string>
    <string name="guardar">GUARDAR</string>
    <string name="en_ingles">En Ingles</string>
    <string name="fecha_fin">Fecha Fin: </string>
    <string name="ingrese_oferta">Ingrese oferta</string>
    <string name="seleccione_moneda">Seleccione moneda de pago:</string>
    <string name="seleccione_categoria">Seleccione una categoria:</string>
    <string name="label_paga">Horas: %1$s Max $/Hora: %2$s</string>
    <string name="label_postularse">Se ha postulado a la oferta</string>
    <string name="label_mensaje_no_instalado">No hay aplicaciones para mandar mensajes en el dispositivo.</string>

</resources>
