<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.miapp.MainActivity">
    <item
        android:id="@+id/menuCrearOferta"
        android:title="@string/toolbar_crear_oferta"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menuVerOfertas"
        android:title="@string/toolbar_ver_ofertas"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuConfig"
        android:title="@string/toolbar_config"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuSalir"
        android:title="@string/toolbar_salir"
        app:showAsAction="never" />

</menu>

